# src/main/resources/api.yml
@@ -233,7 +233,60 @@ paths:
                   code:
                     type: integer
                     example: -1
-
+  /register:
+    post:
+      summary: 用户注册接口
+      operationId: registerUser
+      tags:
+        - authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+              required:
+                - username
+                - password
+      responses:
+        '200':
+          description: 注册成功
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    example: 1
+                  data:
+                    type: string
+                    example: "eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJleGFtcGxlVXNlciIsInVzZXJJZCI6IjEyMzQ1NiJ9.IZ_7uPnXgdT_cowGstQ3L8lBdRrVh8il_CvM7n4GQV4"
+        '409':
+          description: 用户名已存在
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    example: 0
+        default:
+          description: 未知错误
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    example: -1
 components:
   schemas:
     Product:
